Data template added

--- a/Simple/resume.tex
+++ b/Simple/resume.tex
@@ -97,7 +97,7 @@
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
-%	PROJECTS SECTION
+%	RESEARCH SECTION
 %-------------------------------------------------------------------------------
 \section{Research\\Interests}
 \par
@@ -107,8 +107,50 @@ Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler
 \cusemph{Rohan Bavishi}, Awanish Pandey, Subhajit Roy, \textit{To Be Precise : Regression Aware Debugging} \\\cusemph{OOPSLA 2016} (To Appear), Amsterdam, Netherlands
 
 \section{Research\\Projects}
-Yello!\\
+\cusemph{New Strategy for analysis of Concurrent Programs via Sequentialization} \\
+\supervisor{Supervisor : Prof. Subhajit Roy}\timeline{Aug '16 - Present}
+\\\\
+\cusemph{Using Interpolant-Based Proofs to Improve Bug Localization and Repair}
+\\
+\supervisor{Supervisor : Prof. Subhajit Roy}\timeline{Jul '15 - Aug '16}
+\\\\
+\cusemph{Using SAT/QBF-Solvers to Detect Side-Channel Vulnerabilities in Hardware}
+\\
+\supervisor{Supervisors : Prof. Paolo Ienne and Mr. Andrew Becker}\timeline{May '16 - Jul '16}
+\\\\
+\cusemph{A CBMC-based Implementation of DirectFix}
+\\
+\supervisor{Supervisor : Prof. Subhajit Roy}\timeline{May '15 - Jul '15}
 
+\sectionline
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	ACADEMIC PROJECTS SECTION
+%-------------------------------------------------------------------------------
+\section{Academic\\Projects}
+\cusemph{Re-Inventing A Median Algorithm for Disk-Resident Data}
+\\
+\supervisor{Supervisor : Prof. Surender Baswana}\timeline{Aug '14 - Nov '14}
+\\\\
+\cusemph{Peer-to-Peer Dropbox}
+\\
+\supervisor{Supervisor : Prof. Subhajit Roy}\timeline{Aug '13 - Nov '13}
+
+\sectionline
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	COURSE PROJECTS SECTION
+%-------------------------------------------------------------------------------
+\section{Course\\Projects}
+\cusemph{An End-to-End Compiler for Perl-like Language}
+\\
+\supervisor{Course : Compilers $|$ Supervisor : Prof. Subhajit Roy}\timeline{Jan '15 - Apr '15}
+\\\\
+\cusemph{An Integer Super-Scalar MIPS-R10K based Processor Simulator}
+\\
+\supervisor{Course : Computer Architecture $|$ Supervisor : Prof. Mainak Chaudhuri}\timeline{Jan '15 - Apr '15}
 
 \sectionline
 %-------------------------------------------------------------------------------
@@ -118,66 +160,15 @@ Yello!\\
 %-------------------------------------------------------------------------------
 \section{Computer\\Skills}
 
-\cusemph{Languages}: C, C++, Java, ML, Perl, Bash, Assembly, SQL, \LaTeX.
+\cusemph{Languages}: C, C++, Python, Assembly (x86, MIPS), Bash, Verilog, VHDL, \LaTeX.
 \\
-\cusemph{Web Development}: HTML, CSS, JavaScript, PHP, Apache, IIS, ASP.NET.
+\cusemph{SAT/SMT Solvers}: MathSAT, Z3 
 \\
-\cusemph{Applications}: Vi/Vim, Eclipse, Visual Studio, Git, VMWare, VirtualBox, 
-MySQL, Oracle 11g.
-\\
-\cusemph{Operating Systems}: 
-Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
+\cusemph{Research Tools}: CBMC (Expert), KLEE, CSeq
 \\
 \sectionline
 %-------------------------------------------------------------------------------
 
-%-------------------------------------------------------------------------------
-%	EXPERIENCE SECTION
-%-------------------------------------------------------------------------------
-% Modify the format of each position
-\begin{format}
-\title{l}\employer{r}\\
-\dates{l}\location{r}\\
-\body\\
-\end{format}
-%-------------------------------------------------------------------------------
-
-\section{Experience}
-\employer{Employer One}
-\location{Location One}
-\dates{Dates One}
-\title{\cusemph{Title One}}
-\begin{position}
-Vivamus ullamcorper a lacus non laoreet. Etiam ultricies in est quis finibus. 
-Curabitur posuere est quis felis sodales, vitae aliquam ex consequat. In non 
-magna felis.
-\end{position}
-
-\employer{Employer One}
-\location{Location One}
-\dates{Dates One}
-\title{\cusemph{Title One}}
-\begin{position}
-Donec venenatis volutpat tortor, quis fringilla turpis ornare et. Curabitur 
-neque enim, facilisis vitae lacus non, malesuada volutpat tortor. Etiam 
-elementum neque nibh, ac faucibus ligula tempor vel. Pellentesque a pharetra 
-neque, vel facilisis nunc.
-\end{position}
-
-\employer{Employer One}
-\location{Location One}
-\dates{Dates One}
-\title{\cusemph{Title One}}
-\begin{position}
-Mauris lacinia tellus vel elit lobortis, ut convallis tellus euismod. Praesent 
-sagittis magna non nisl rutrum, dapibus mollis ante commodo. Donec scelerisque 
-velit a consequat vehicula. Nam eget dignissim est, et varius arcu. Vivamus eu 
-lacus feugiat, ullamcorper odio ut, blandit enim. Suspendisse potenti. 
-Vestibulum auctor purus et massa luctus, quis cursus mauris laoreet. Praesent 
-luctus dictum justo vitae dictum.
-\end{position}
-\newline
-\sectionline
 %-------------------------------------------------------------------------------
 %	Interests
 %-------------------------------------------------------------------------------
