Academic projects added

--- a/Simple/resume.tex
+++ b/Simple/resume.tex
@@ -56,7 +56,7 @@
     filecolor=magenta,      
     urlcolor=colorlink,
 }
-\usepackage[left=0.7in, right=2in, top=1in]{geometry}
+\usepackage[left=0.7in, right=2in, top=0.9in]{geometry}
 
 % Increase text height
 \textheight=700pt
@@ -106,24 +106,68 @@ Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler
 \section{Publications}
 \cusemph{Rohan Bavishi}, Awanish Pandey, Subhajit Roy, \textit{To Be Precise : Regression Aware Debugging} \\\cusemph{OOPSLA 2016} (To Appear), Amsterdam, Netherlands
 
+\vspace{3ex}
 \section{Research\\Projects}
 \cusemph{New Strategy for analysis of Concurrent Programs via Sequentialization} \\
 \supervisor{Supervisor : Prof. Subhajit Roy}\timeline{Aug '16 - Present}
-\\\\
-\cusemph{Using Interpolant-Based Proofs to Improve Bug Localization and Repair}
+\vspace{1ex}
+\\
+\describe{
+	Working with \href{http://users.ecs.soton.ac.uk/gp4/cseq/cseq.html}{CSeq} for code-to-code translation of concurrent into equivalent sequential programs\\
+	Devising solving strategies to reduce verification time on existing backends\\
+}
+\vspace{2ex}\\
+\cusemph{Using Interpolant-Based Proofs to Improve Bug Localization and Repair (Publication)}
 \\
 \supervisor{Supervisor : Prof. Subhajit Roy}\timeline{Jul '15 - Aug '16}
-\\\\
+\vspace{1ex}
+\\
+\describe{
+	A new method to improve quality of bug localizations for a set of given passing and failing test-cases\\
+	Interpolants are constructed from passing tests to derive \emph{soft} roadblocks which discourage localizations which violate these interpolants\\
+	Improvements upto 45\% achieved in the quality of localizations in terms of developer effort involved\\
+	\emph{Paper accepted in OOPSLA, one of the premier peer-reviewed conferences in Programming Languages}
+}
+\vspace{2ex}\\
 \cusemph{Using SAT/QBF-Solvers to Detect Side-Channel Vulnerabilities in Hardware}
 \\
 \supervisor{Supervisors : Prof. Paolo Ienne and Mr. Andrew Becker}\timeline{May '16 - Jul '16}
-\\\\
+\vspace{1ex}
+\\
+\describe{
+	Summer Internship Project at Processor Architecture Laboratory, EPFL, Switzerland\\
+	Studied various side-channel attacks, their mitigation techniques, and formal verification methods to prove their effectiveness\\
+	Developed a QBF-Encoding to verify if a cryptographic circuit is secure against a popular side-channel attack based on fault-injection\\
+	In the process of writing a paper and submitting to a peer-reviewed conference\\
+}
+\vspace{2ex}\\
 \cusemph{A CBMC-based Implementation of DirectFix}
 \\
 \supervisor{Supervisor : Prof. Subhajit Roy}\timeline{May '15 - Jul '15}
+\vspace{1ex}
+\\
+\describe{
+	Ported the algorithm used in \href{https://www.comp.nus.edu.sg/~abhik/pdf/ICSE15-directfix.pdf}{DirectFix} to CBMC\\
+	Tried to reproduce the experimental results provided in the paper, and devise further optimizations\\
+}
 
 \sectionline
 %-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%       AWARDS & ACHIEVEMENTS	
+%-------------------------------------------------------------------------------
+\section{Awards \& Achievements}
+Secured an All-India-Rank of 202 in JEE Advanced 2013 amongst 150,000 candidates\\
+Secured an All-India-Rank of 175 in JEE Mains 2013 amongst 20,00,000 candidates\\
+Secured an All-India-Rank of 33 in AMTI-Mathematics Olympiad\\
+Academic Excellence Award 2013-14, IIT Kanpur
+
+\sectionline
+%-------------------------------------------------------------------------------
+
+\newpage
+\sectionline
 
 %-------------------------------------------------------------------------------
 %	ACADEMIC PROJECTS SECTION
@@ -132,10 +176,25 @@ Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler
 \cusemph{Re-Inventing A Median Algorithm for Disk-Resident Data}
 \\
 \supervisor{Supervisor : Prof. Surender Baswana}\timeline{Aug '14 - Nov '14}
-\\\\
+\vspace{1ex}
+\\
+\describe{
+	Re-invented a two-pass \textit{deterministic} algorithm to find median of large data-sets (approx. 1 TB)\\
+	The algorithm developed was similar to the original \href{http://polylogblog.files.wordpress.com/2009/08/80munro-median.pdf}{paper} by Munro-Paterson (1980)\\
+	Carried out extensive tests to evaluate the performance of the algorithm
+}\vspace{2ex}
+\\
 \cusemph{Peer-to-Peer Dropbox}
 \\
 \supervisor{Supervisor : Prof. Subhajit Roy}\timeline{Aug '13 - Nov '13}
+\vspace{1ex}
+\\
+\describe{
+	A linux application for backing-up and syncing of files between two or more peers\\
+	Users have a shared folder across different machines, with local copies, in which any changes made are synced across all devices\\
+	Linux inotify API used to track changes in the shared folder and rsync used to sync the modifications to ensure efficient transfer\\
+	Multithreading with mutexes used to parallelize syncing and file-monitoring operations
+}
 
 \sectionline
 %-------------------------------------------------------------------------------
@@ -147,7 +206,14 @@ Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler
 \cusemph{An End-to-End Compiler for Perl-like Language}
 \\
 \supervisor{Course : Compilers $|$ Supervisor : Prof. Subhajit Roy}\timeline{Jan '15 - Apr '15}
-\\\\
+\vspace{1ex}
+\\
+\describe{
+	Built an end-to-end compiler that takes a subset of the Perl language and outputs MIPS assembly\\
+	Features such as \textit{operator overloading}, \textit{dynamic type-checking}, \textit{variable function arguments}, \textit{hashes}, \textit{lists}, \textit{type-based namespaces} implemented\\
+	Secured maximum points possible for the project
+}
+\vspace{2ex}\\
 \cusemph{An Integer Super-Scalar MIPS-R10K based Processor Simulator}
 \\
 \supervisor{Course : Computer Architecture $|$ Supervisor : Prof. Mainak Chaudhuri}\timeline{Jan '15 - Apr '15}
@@ -172,8 +238,9 @@ Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler
 %-------------------------------------------------------------------------------
 %	Interests
 %-------------------------------------------------------------------------------
-\section{Interests}
-Interest One, Interest Two, Interest Three, Interest Four, ...Et Cetera.
+\section{Extra Interests}
+\cusemph{Project Euler}: Solved : 257/Something \textit{(India Rank : 11)}\\
+\cusemph{Programming Hobbies}: Competitive Programming, CTF, Open Source
 %-------------------------------------------------------------------------------
 \end{resume}
 \end{document}
